# computer_graphics

./: CMakeLists.txt  todo.md
src/: Color.cpp  Color.h  CornellBox.cpp  CornellBox.h  ScreenPainter.cpp  ScreenPainter.h  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  Vec3.cpp  Vec3.h  main.cpp
